# glBoids

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: gl.h  logg.hpp  main.cpp
